# kcpilot

./: .gitignore  Cargo.toml  DESIGN.md  README.md  env.example  llmdbg.txt
.github/workflows/: deploy-docs.yml  publish.yml
analysis_tasks/: README.md  broker_id_issues.yaml  capacity_planning.yaml  client_consumer_health.yaml  cluster_overview.yaml  config_optimization.yaml  consumer_lag.yaml  disk_usage.yaml  high_error_rate.yaml  isr_shrinkage.yaml  jvm_performance.yaml  leader_imbalance.yaml  log_detailed_errors.yaml  log_quick_scan.yaml  network_issues.yaml  offline_partitions.yaml  performance_analysis.yaml  root_cause_analysis.yaml  security_audit.yaml  topic_analysis.yaml  under_replicated_partitions.yaml
docs/: Gemfile  _config.yml  api.md  examples.md  how-to.md  index.md  installation.md  quickstart.md  support.md  tutorials.md
docs/_includes/: header.html  sidebar.html
docs/_layouts/: default.html
docs/_sass/: main.scss
docs/analysis-tasks/: authentication_authorization.md  broker_count_ha.md  in_transit_encryption.md  index.md  isr_replication_margin.md  jvm_heap_memory_ratio.md  jvm_heap_preallocation.md  jvm_heap_size_limit.md  kraft_controller_ha_check.md  minimum_cpu_cores.md  multiple_log_dirs.md  rack_awareness.md  recent_log_errors.md  separate_listeners.md  thread_configuration.md  zookeeper_ha_check.md  zookeeper_heap_memory.md  zookeeper_heap_preallocation.md
src/: lib.rs  main.rs
src/analysis/: executor.rs  mod.rs  task.rs
src/analyzers/: config_validator.rs  mod.rs  rules.rs
src/cli/: commands.rs  mod.rs  utils.rs
(+60 files in other folders)
