[package]
name = "kafkapilot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Kafka cluster health diagnostics and remediation tool"
license = "MIT"

[lib]
name = "kafkapilot"
path = "src/lib.rs"

[[bin]]
name = "kafkapilot"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "env"] }
colored = "2.1"
indicatif = "0.17"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# File handling
tar = "0.4"
flate2 = "1.0"

# Templating for reports
tera = "1.19"
comrak = "0.21"  # Markdown processing

# Additional utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
md5 = "0.7"
walkdir = "2.4"

# LLM Integration
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenv = "0.15"

# OpenAI-specific
async-openai = "0.23"

[dev-dependencies]
tempfile = "3.8"


